# chart-analyser

./: .gitignore  AAPL_D_1y.csv  AAPL_W_1y.csv  CHANGELOG.md  CRITICAL_BUGS_AND_FIXES.md  NIFTY_D_6m.csv  NIFTY_W_1y.csv  NIFTY_W_1y_dom.csv  NIFTY_W_2y.csv  NIFTY_W_2y_dom.csv  QUICK_START.md  README.md  README_headed.md  TATAMOTORS_D_5y.csv  TMPV_1M_5y_dom.csv  main.py  pyproject.toml  test_dom.py  tradingview_scraper_dom.py  tradingview_scraper_headed.py
docs/legacy/: CURRENT_STATUS.md  FIXES_COMPLETED.md  SUMMARY.md
src/tradingview_scraper/: __init__.py  candles.py  cli.py  config.py  csv_writer.py  dates.py  dom_reader.py  hooks.py  render.py  scraper.py
tests/: __init__.py  test_compatibility.py  test_dates.py  test_hooks.py
