[project]
name = "tradingview-scraper"
version = "0.1.0"
description = "TradingView OHLC scraper using Playwright and DOM legend reads."
requires-python = ">=3.10"
dependencies = [
    "playwright",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
